--- a/src/layouts/layouts.module.css
+++ b/src/layouts/layouts.module.css
@@ -10,3 +10,7 @@
 .main {
   padding: 2rem;
 }
+
+::-webkit-scrollbar {
+  display: none
+}
